# Prilo

./: LDBC.sh  LGPQ.sh  LGPQApp  Makefile  PPMatchApp  README.txt  Test.sh
Common/: data_type.h
LGPQ/: CMakeLists.txt  DIGraph.h  DataRead.h  EcallBF.cpp  Enclave_u.h  GlobalDefinition.h  LGPQ.h  PreTest.sh  QGen.sh  cgbe.h  data_read.h  main.cpp  main.h  readme
LGPQ/BF/: BloomFilter.cpp  cmake_install.cmake
LGPQEnclave/: Enclave.config.xml  Enclave.cpp  Enclave_t.h
PPMatch/: CMakeLists.txt  DIGraph.h  DataRead.h  Enclave_u.c  GlobalDefinition.h  Makefile  PPMatch.cpp  PPMatch.h  PreTest.sh  QGen.sh  cgbe.h  cmake_install.cmake  data_read.h  main  main.cpp  main.h
PPMatch/BF/: CMakeLists.txt  Makefile
PPMatch/query/: readme
PPMatch/query/Query-DBLP/: D1-64  D2-150  D5-64  D6-150  D6-64  D8-150  D9-64
PPMatch/query/Query-Slashdot/: S1-100  S4-64  S7-64  S8-64
PPMatch/query/Query-Twitter/: T1-100  T10-64  T6-100
PPMatch/query/diameter=3/Query-DBLP/: D10-150  D3-64  D4-150  D4-64  D9-150
PPMatch/query/diameter=3/Query-Slashdot/: S1-64  S2-100  S3-100  S5-64  S6-64
PPMatch/query/diameter=3/Query-Twitter/: T3-64  T4-64  T5-64  T8-64  T9-100
PPMatch/query/diameter=4/Query-DBLP/: D1-150  D1-64  D2-150  D2-64  D3-64  D4-64  D5-64  D7-150  D7-64  D8-150  D8-64  D9-150  D9-64
PPMatch/query/diameter=4/Query-Slashdot/: S1-100  S1-64  S10-100  S10-64  S2-64  S5-100  S5-64  S7-100  S7-64  S8-100  S9-100
PPMatch/query/diameter=4/Query-Twitter/: T1-64  T10-64  T3-100  T5-100  T5-64  T6-100  T8-100
PPMatchEnclave/: Enclave.h  Enclave_t.c
(+81 files in other folders)
